--- a/deployment.yml
+++ b/deployment.yml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: bd-helloworld-deployment
 spec:
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -20,38 +20,30 @@ apiVersion: v1
 kind: Service
 metadata:
   name: bd-helloworld-service
-  labels:
-    app: bd-helloworld-service
 spec:
-  type: ClusterIP
   ports:
-    # the port that this service should serve on
-    - port: 80
+    - name: bd-helloworld-port
+      port: 80
       protocol: TCP
       targetPort: 8080
-  # label keys and values that must match in order to receive traffic for this service
   selector:
     app: bd-helloworld-deployment
+  type: ClusterIP
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   annotations:
-    ingress.bluemix.net/proxy-read-timeout: serviceName=echoserver-service timeout=300s
   name: bd-helloworld-ingress
 spec:
   rules:
   - host: bryan-workday-demo.us-south.containers.appdomain.cloud
     http:
       paths:
-      - path: /
-        backend:
+      - backend:
           serviceName: bd-helloworld-service
           servicePort: 80
- tls:
-  - hosts:
-    - bryan-workday-demo.us-south.containers.appdomain.cloud
-    secretName: bryan-workday-demo     
+        path: /helloworld
 
      
     
