--- a/deployment.yml
+++ b/deployment.yml
@@ -40,13 +40,13 @@ metadata:
   name: bd-helloworld-ingress
 spec:
   rules:
-  - host: updated-in-toolchain-script.cloud
-    http:
+  - http:
       paths:
       - backend:
           serviceName: bd-helloworld-service
           servicePort: 80
         path: /
+    host: updated-in-toolchain-script.cloud
 
      
     
